--- a/css/header.css
+++ b/css/header.css
@@ -6,7 +6,7 @@ body {
 
 #initbackground{
   background: url(../back2.jpg) no-repeat center center;
-  height: 100vh;
+  background-size: cover;
 }
 
 #logo {
