--- a/css/mid.css
+++ b/css/mid.css
@@ -95,7 +95,7 @@
 
 @media screen and (max-width: 1024px){
     .text-appear{
-      margin-top: 40%;
+      margin-top: 10%;
     }
     #skills{
       margin-top: 10%;
